Finally fix overflows

--- a/src/Content/Content.css
+++ b/src/Content/Content.css
@@ -1,6 +1,6 @@
 .content {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 75px);
   display: flex;
   flex-direction: column;
