--- a/src/ContentReveal/ContentReveal.css
+++ b/src/ContentReveal/ContentReveal.css
@@ -12,6 +12,7 @@
   /* height: calc(100vh - 75px); */
   flex-direction: column;
   display: flex;
+  display: none;
   /* justify-content: center; */
   align-items: center;
   position: absolute;
